--- a/src/layouts/System/navigation.css
+++ b/src/layouts/System/navigation.css
@@ -6,10 +6,21 @@
     color: white !important;
 }
 
-.ant-menu-submenu-selected svg {
-    fill: white;
+.ant-menu-submenu-selected > .ant-menu-submenu-title{
+    background-color: white;
 }
 
-.ant-menu-submenu-selected span:nth-child(0) {
-    color: white;
+.ant-menu-submenu-selected svg {
+    fill: #4E4040;
+}
+
+.ant-menu-submenu-selected span:nth-child(2) {
+    color: #4E4040;
+}
+
+.ant-menu-submenu-selected i::before{
+    color: #4E4040;
+}
+.ant-menu-submenu-selected i::after{
+    color: #4E4040;
 }
